[package]
name = "wil"
version = "0.0.3"
authors = ["Jean Gautier <jeanga@hotmail.com>"]
edition = "2018"
publish = ["crates-io"]
license = "MIT"
description = "This crates is a demonstrator of what a Windows Implementation Library in Rust could look like"
repository = "https://github.com/jeanga/wil-rs"
keywords = ["winapi", "win32", "token"]
categories = []

[dependencies]
log = "0.4.8"
winapi = {version = "0.3.8", features = ["securitybaseapi", "handleapi", "processthreadsapi", "errhandlingapi"]}

